--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run clean && npm run compile",
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
-    "test": "npx hardhat test --network hardhat"
+    "test": "npx hardhat test --network hardhat",
+    "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
   "keywords": [],
   "author": "",
