--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "node": "npx hardhat node",
-    "build": "npm run clean && npm run compile",
+    "build": "npm run build:contracts && npm run build:solaris ",
+    "build:solaris": "tsc",
+    "start:node": "npx hardhat node",
+    "build:contracts": "npm run clean && npm run compile",
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
     "test": "npx hardhat test --network hardhat",
@@ -16,8 +18,6 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
@@ -27,7 +27,7 @@
     "chai-as-promised": "^7.1.1",
     "decimal.js": "^10.2.1",
     "dotenv": "^8.2.0",
-    "ethers": "^5.0.31",
+    "ethers": "^5.4.7",
     "hardhat": "^2.4.3",
     "hardhat-typechain": "^0.3.5",
     "husky": "^4.3.8",
