--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@trustline-inc/solaris",
+  "name": "@trustline/solaris",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
