--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "build:contracts": "npm run clean && npm run compile",
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
-    "test": "npx hardhat test --network hardhat",
+    "test:package": "jest",
+    "test:hardhat": "npx hardhat test --network hardhat",
     "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.15",
+    "@types/jest": "^27.0.2",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.41",
+    "babel-jest": "^27.2.4",
     "bignumber.js": "^9.0.1",
     "chai": "^4.3.0",
     "chai-as-promised": "^7.1.1",
@@ -31,10 +37,12 @@
     "hardhat": "^2.4.3",
     "hardhat-typechain": "^0.3.5",
     "husky": "^4.3.8",
+    "jest": "^27.2.4",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "pretty-quick": "^3.1.0",
     "ts-generator": "^0.1.1",
+    "ts-jest": "^27.0.5",
     "ts-node": "^9.1.1",
     "typechain": "^3.0.0",
     "typescript": "^4.1.5",
