skip lib check with tsc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "target": "es6",
     "noImplicitAny": true,
     "moduleResolution": "node",
@@ -14,5 +15,5 @@
     }
   },
   "include": ["src/**/*", ],
-  "exclude": ["typechain/**/*", "scripts/**/*"]
+  "exclude": ["typechain/**/*", "scripts/**/*"],
 }
