--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
   "name": "@trustline/solaris",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags",
     "build": "npm run build:contracts && npm run build:solaris ",
     "build:solaris": "tsc",
     "start:node": "npx hardhat node",
     "build:contracts": "npm run clean && npm run compile",
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
-    "test:package": "jest",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "test:package": "jest --config jestconfig.json",
     "test:hardhat": "npx hardhat test --network hardhat",
     "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
@@ -38,12 +49,14 @@
     "hardhat-typechain": "^0.3.5",
     "husky": "^4.3.8",
     "jest": "^27.2.4",
-    "prettier": "^2.2.1",
+    "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "pretty-quick": "^3.1.0",
     "ts-generator": "^0.1.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typechain": "^3.0.0",
     "typescript": "^4.1.5",
     "web3": "^1.3.5"
