--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
+    "declaration": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "target": "es6",
