--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dist/**/*"
   ],
   "scripts": {
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm test && npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags",
     "build": "npm run build:contracts && npm run build:solaris ",
     "build:solaris": "tsc",
     "start:node": "npx hardhat node",
@@ -21,7 +21,7 @@
     "compile": "npx hardhat compile",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "test:package": "jest --config jestconfig.json",
+    "test:package": "jest --config jest.config.js",
     "test:hardhat": "npx hardhat test --network hardhat",
     "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-typescript": "^7.15.0",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.15",
     "@types/jest": "^27.0.2",
@@ -44,6 +45,7 @@
     "chai-as-promised": "^7.1.1",
     "decimal.js": "^10.2.1",
     "dotenv": "^8.2.0",
+    "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
     "hardhat": "^2.4.3",
     "hardhat-typechain": "^0.3.5",
@@ -60,5 +62,8 @@
     "typechain": "^3.0.0",
     "typescript": "^4.1.5",
     "web3": "^1.3.5"
+  },
+  "dependencies": {
+    "xrpl": "^2.0.0-beta.4"
   }
 }
