--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
+  "repository": {
+    "url": "git://github.com/trustline-inc/solaris.git"
+  },
   "files": [
     "dist/**/*"
   ],
