--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "compile": "npx hardhat compile",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "test:module": "jest --config jest.config.js",
-    "test:contracts": "npx hardhat test --network hardhat",
+    "test:module": "npx hardhat test ./test/index.test.ts --network hardhat",
+    "test:contracts": "npx hardhat test ./test/contracts --network hardhat",
     "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
   "keywords": [],
@@ -57,6 +57,7 @@
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "pretty-quick": "^3.1.0",
+    "sinon": "^11.1.2",
     "ts-generator": "^0.1.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^9.1.1",
