--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "test:module": "npx hardhat test ./test/index.test.ts --network hardhat",
-    "test:contracts": "npx hardhat test ./test/contracts --network hardhat",
+    "test:contracts": "npx hardhat test ./test/contracts/*.test.ts --network hardhat",
     "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
   "keywords": [],
