--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "compile": "npx hardhat compile",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "test:module": "npx hardhat test ./test/index.test.ts --network hardhat",
+    "test:solaris": "npx hardhat test ./test/index.test.ts --network hardhat",
     "test:contracts": "npx hardhat test ./test/contracts/*.test.ts --network hardhat",
     "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
