--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
-    "build": "npm run build:contracts && npm run build:solaris ",
-    "build:solaris": "tsc",
+    "build": "npm run build:contracts && npm run build:package ",
+    "build:package": "tsc",
     "start:node": "npx hardhat node",
     "build:contracts": "npm run clean && npm run compile",
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "test:solaris": "npx hardhat test ./test/index.test.ts --network hardhat",
+    "test:package": "npx hardhat test ./test/index.test.ts --network hardhat",
     "test:contracts": "npx hardhat test ./test/contracts/*.test.ts --network hardhat",
     "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
