--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "pretty-quick": "^3.1.0",
     "sinon": "^11.1.2",
+    "solhint": "^3.3.6",
+    "solhint-plugin-prettier": "^0.0.5",
     "ts-generator": "^0.1.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^9.1.1",
