--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,8 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm test
+          npm test:contracts
+          npm test:package
       - name: Archive contract ABI artifacts
         uses: actions/upload-artifact@v2
         with:
