rename to @trustline/bridge

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Archive contract ABI artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: solaris-abi-artifacts
+          name: bridge-abi-artifacts
           path: |
             artifacts
