--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Archive contract ABI artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: solaris-abi-artifacts
+          name: bridge-abi-artifacts
           path: |
             artifacts
   release:
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
-          name: solaris-abi-artifacts
+          name: bridge-abi-artifacts
           path: artifacts
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v2
