--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trustline/bridge",
-  "version": "0.2.0",
+  "version": "1.0.0-alpha1",
   "description": "",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
