--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,8 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm test
+          npm run test:contracts
+          npm run test:package
       - name: Archive contract ABI artifacts
         uses: actions/upload-artifact@v2
         with:
