--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trustline/bridge",
-  "version": "1.0.0-alpha1",
+  "version": "1.0.0-alpha3",
   "description": "",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -8,7 +8,8 @@
     "url": "git://github.com/trustline-inc/bridge.git"
   },
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "artifacts"
   ],
   "scripts": {
     "prepublishOnly": "npm run lint",
@@ -22,13 +23,25 @@
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "npm run prettier:solidity && npm run solhint",
+    "solhint": "./node_modules/.bin/solhint contracts/**/*.sol contracts/**/**/*.sol",
+    "solhint:fix": "./node_modules/.bin/solhint --fix contracts/**/*.sol contracts/**/**/*.sol",
+    "prettier:solidity": "./node_modules/.bin/prettier --write contracts",
     "test:package": "npx hardhat test ./test/index.test.ts --network hardhat",
     "test:contracts": "npx hardhat test ./test/contracts/*.test.ts --network hardhat",
     "deploy:local": "npx hardhat --network local run ./scripts/deploy.ts"
   },
   "keywords": [],
-  "author": "",
+  "contributors": [
+    {
+      "name": "Matthew Rosendin",
+      "email": "matt@trustline.co"
+    },
+    {
+      "name": "Shine Lee",
+      "email": "shine@trustline.co"
+    }
+  ],
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.5",
