--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,8 @@ jobs:
           registry-url: "https://npm.pkg.github.com"
           scope: "@trustline"
       # Publish to GitHub Packages
-      - run: npm publish --tag alpha
+      - run: |
+          npm install
+          npm publish --tag alpha
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
