update prettier and solhint configs to match probity settings

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,15 @@
 {
-  "printWidth": 120,
-  "trailingComma": "all",
-  "singleQuote": false
+  "overrides": [
+    {
+      "files": "*.sol",
+      "options": {
+        "printWidth": 120,
+        "tabWidth": 4,
+        "useTabs": false,
+        "singleQuote": false,
+        "bracketSpacing": false,
+        "explicitTypes": "always"
+      }
+    }
+  ]
 }
