--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@trustline/bridge",
-  "version": "1.0.0-alpha6",
+  "name": "@trustline-inc/bridge",
+  "version": "1.0.0-alpha7",
   "description": "",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
