--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,12 @@ jobs:
           name: bridge-abi-artifacts
           path: |
             artifacts
+      - name: Archive package dist artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: bridge-dist-artifacts
+          path: |
+            dist
   release:
     runs-on: ubuntu-latest
     needs: build_and_test
