--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,14 +20,12 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: bridge-abi-artifacts
-          path: |
-            artifacts
+          path: artifacts
       - name: Archive package dist artifacts
         uses: actions/upload-artifact@v2
         with:
           name: bridge-dist-artifacts
-          path: |
-            dist
+          path: dist
   release:
     runs-on: ubuntu-latest
     needs: build_and_test
@@ -37,6 +35,10 @@ jobs:
         with:
           name: bridge-abi-artifacts
           path: artifacts
+      - uses: actions/download-artifact@v2
+        with:
+          name: bridge-dist-artifacts
+          path: dist
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v2
         with:
