--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@babel/preset-typescript": "^7.15.0",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^2.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.15",
     "@types/jest": "^27.0.2",
     "@types/mocha": "^8.2.1",
@@ -68,7 +69,6 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
     "hardhat": "^2.4.3",
-    "hardhat-typechain": "^0.3.5",
     "husky": "^4.3.8",
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
@@ -82,7 +82,7 @@
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typechain": "^3.0.0",
+    "typechain": "^8.1.0",
     "typescript": "^4.1.5",
     "web3": "^1.3.5"
   },
