--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     }
   },
   "include": ["src/**/*", ],
-  "exclude": ["typechain/**/*", "scripts/**/*"],
+  "exclude": ["typechain-types/**/*", "scripts/**/*"],
 }
